	(default_target_compile): Add "linker=" option, similar to
	"compiler=" option, but the former overrides the latter when
	building an executable.
	(default_target_compile): Ensure that "--emit obj" is spaced from
	previous item when used to compile Rust.  Use "--emit asm" instead
	of "-S" when generating assembly from Rust sources.

2020-06-20  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (Libgloss): Update menu.
	(find_go procedure, find_go_linker procedure): New nodes.
	(find_rustc procedure): New node.

2020-06-19  Tom Tromey  <tromey@adacore.com>

	* doc/dejagnu.texi (target_compile procedure): Document Go
	additions.
	* lib/target.exp (default_target_compile): Handle Go.
	* lib/libgloss.exp (find_go, find_go_linker): New procs.

2020-06-19  Tom Tromey  <tromey@adacore.com>

	* doc/dejagnu.texi (target_compile procedure): Document rust
	additions.
	* lib/target.exp (default_target_compile): Handle rust.
	* lib/libgloss.exp (find_rustc): New proc.

2020-06-19  Tom Tromey  <tromey@adacore.com>

	* lib/target.exp (default_target_compile): Add early_flags.
	* doc/dejagnu.texi (target_compile procedure): Document
	early_flags.

2020-06-02  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41647
	* NEWS: Fix typo.  Fix Emacs mode tag.
	Document use of Tcl namespace ::dejagnu for internals.
	* runtest.exp (dejagnu::command_line): New namespace.
	(dejagnu::command_line::save_cmd_var): New procedure.
	(dejagnu::command_line::restore_cmd_vars): New procedure.
	(dejagnu::command_line::dump_cmd_vars): New procedure.
	* runtest.exp: Save internal variables set by command line
	arguments during the first pass and restore their values after
	loading testsuite init files.

2020-06-01  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41647
	* runtest.exp: Describe search for testsuite at verbose level 3.
	Print initial working directory at verbose level 1.

2020-05-28  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41587